--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team Nexus</title>
+  <meta name="description" content="Team Nexus is a Shotbow group that aims to connect Annihilation, MineZ, and HCF players together in a fun, lively Discord. Join Today!">
+  <meta name="keywords" content="shotbow, team, nexus, annihilation, minez, hcf, minecraft, 1.8.0, 1.7.0, 1.7, 1.8, 1.12, 1.11, server, fun, clan, group, team, red, blue, green, yellow, red, discord, slack, join, invite, link, play, fun, awesome, athys, maashg, itsanni, mikotun, unhinge, youtube, stream, twitch, clan, music">
+  <meta name="author" content="Athys">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/teamnexus.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
